--- a/hw2/CMakeLists.txt
+++ b/hw2/CMakeLists.txt
@@ -4,8 +4,9 @@ project(Rasterizer)
 find_package(OpenCV REQUIRED)
 
 set(CMAKE_CXX_STANDARD 17)
+set(CMAKE_OSX_ARCHITECTURES arm64)
 
-include_directories(/usr/local/include)
+include_directories("/opt/homebrew/include")
 
 add_executable(Rasterizer main.cpp rasterizer.hpp rasterizer.cpp global.hpp Triangle.hpp Triangle.cpp)
 target_link_libraries(Rasterizer ${OpenCV_LIBRARIES})
