--- a/hw2/.vscode/settings.json
+++ b/hw2/.vscode/settings.json
@@ -86,6 +86,7 @@
         "semaphore": "cpp",
         "stop_token": "cpp",
         "cinttypes": "cpp",
-        "*.inc": "cpp"
+        "*.inc": "cpp",
+        "core": "cpp"
     }
 }
