--- a/hw3/.vscode/settings.json
+++ b/hw3/.vscode/settings.json
@@ -87,7 +87,8 @@
         "memory_resource": "cpp",
         "stop_token": "cpp",
         "cinttypes": "cpp",
-        "__bits": "cpp"
+        "__bits": "cpp",
+        "core": "cpp"
     },
     "C_Cpp.default.configurationProvider": "ms-vscode.cmake-tools"
 }
