--- a/finalproject/opengl/.vscode/settings.json
+++ b/finalproject/opengl/.vscode/settings.json
@@ -2,11 +2,8 @@
     "C_Cpp.default.configurationProvider": "ms-vscode.cmake-tools",
     "files.associations": {
         "*.tsx": "typescriptreact",
-        "iomanip": "cpp",
-        "iosfwd": "cpp",
-        "type_traits": "cpp",
-        "array": "cpp",
-        "bit": "cpp",
+        "iostream": "cpp",
+        "ostream": "cpp",
         "*.tcc": "cpp",
         "cctype": "cpp",
         "clocale": "cpp",
@@ -18,29 +15,19 @@
         "cstdlib": "cpp",
         "cwchar": "cpp",
         "cwctype": "cpp",
-        "unordered_map": "cpp",
-        "vector": "cpp",
         "exception": "cpp",
-        "fstream": "cpp",
-        "functional": "cpp",
         "initializer_list": "cpp",
-        "iostream": "cpp",
+        "iosfwd": "cpp",
         "istream": "cpp",
         "limits": "cpp",
-        "memory": "cpp",
         "new": "cpp",
         "numbers": "cpp",
-        "numeric": "cpp",
-        "optional": "cpp",
-        "ostream": "cpp",
-        "sstream": "cpp",
         "stdexcept": "cpp",
         "streambuf": "cpp",
         "string": "cpp",
         "string_view": "cpp",
         "system_error": "cpp",
-        "tuple": "cpp",
-        "typeinfo": "cpp",
-        "utility": "cpp"
+        "type_traits": "cpp",
+        "typeinfo": "cpp"
     }
 }
